// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client constructor should fail with no baseUrl 1`] = `"Missing Azure authority base URL"`;

exports[`client constructor should fail with no baseUrl 2`] = `"Missing Azure authority base URL"`;

exports[`client requests GET json should build proper request with no query 1`] = `
Array [
  "https://contoso.onmicrosoft.com/method",
  Object {
    "headers": Object {
      "Accept": "application/json, image/*;q=0.1",
      "Authorization": "Bearer a.bearer.token",
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "method": "GET",
  },
]
`;

exports[`client requests GET json should build proper request with query 1`] = `
Array [
  "https://contoso.onmicrosoft.com/method?string=value&number=10",
  Object {
    "headers": Object {
      "Accept": "application/json, image/*;q=0.1",
      "Authorization": "Bearer a.bearer.token",
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "method": "GET",
  },
]
`;

exports[`client requests GET json should handle no response 1`] = `
Object {
  "headers": Headers {
    Symbol(map): Object {},
  },
  "ok": true,
  "status": 201,
  "text": "Created",
}
`;

exports[`client requests GET json should handle request error 1`] = `[Error: pawned!]`;

exports[`client requests GET json should return json on success 1`] = `
Object {
  "headers": Headers {
    Symbol(map): Object {
      "Content-Length": Array [
        "15",
      ],
      "Content-Type": Array [
        "application/json",
      ],
    },
  },
  "json": Object {
    "key": "value",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`client requests PATCH json should build proper request with body 1`] = `
Array [
  "https://contoso.onmicrosoft.com/method",
  Object {
    "body": "&string=value&number=10",
    "headers": Object {
      "Accept": "application/json, image/*;q=0.1",
      "Authorization": "Bearer a.bearer.token",
      "Content-Length": 23,
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "method": "PATCH",
  },
]
`;

exports[`client requests PATCH json should build proper request with no body 1`] = `
Array [
  "https://contoso.onmicrosoft.com/method",
  Object {
    "headers": Object {
      "Accept": "application/json, image/*;q=0.1",
      "Authorization": "Bearer a.bearer.token",
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "method": "PATCH",
  },
]
`;

exports[`client requests PATCH json should handle no response 1`] = `
Object {
  "headers": Headers {
    Symbol(map): Object {},
  },
  "ok": true,
  "status": 201,
  "text": "Created",
}
`;

exports[`client requests PATCH json should handle request error 1`] = `[Error: pawned!]`;

exports[`client requests PATCH json should return json on success 1`] = `
Object {
  "headers": Headers {
    Symbol(map): Object {
      "Content-Length": Array [
        "15",
      ],
      "Content-Type": Array [
        "application/json",
      ],
    },
  },
  "json": Object {
    "key": "value",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`client requests POST json should build proper request with body 1`] = `
Array [
  "https://contoso.onmicrosoft.com/method",
  Object {
    "body": "&string=value&number=10",
    "headers": Object {
      "Accept": "application/json, image/*;q=0.1",
      "Authorization": "Bearer a.bearer.token",
      "Content-Length": 23,
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "method": "POST",
  },
]
`;

exports[`client requests POST json should build proper request with no body 1`] = `
Array [
  "https://contoso.onmicrosoft.com/method",
  Object {
    "headers": Object {
      "Accept": "application/json, image/*;q=0.1",
      "Authorization": "Bearer a.bearer.token",
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "method": "POST",
  },
]
`;

exports[`client requests POST json should handle no response 1`] = `
Object {
  "headers": Headers {
    Symbol(map): Object {},
  },
  "ok": true,
  "status": 201,
  "text": "Created",
}
`;

exports[`client requests POST json should handle request error 1`] = `[Error: pawned!]`;

exports[`client requests POST json should return json on success 1`] = `
Object {
  "headers": Headers {
    Symbol(map): Object {
      "Content-Length": Array [
        "15",
      ],
      "Content-Type": Array [
        "application/json",
      ],
    },
  },
  "json": Object {
    "key": "value",
  },
  "ok": true,
  "status": 200,
}
`;

exports[`client url should build url with no query 1`] = `"https://contoso.onmicrosoft.com/authorize"`;

exports[`client url should build url with query 1`] = `"https://contoso.onmicrosoft.com/authorize?client_id=A_CLIENT_ID"`;
